--- a/contact-us.html
+++ b/contact-us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - CyberSafe Solutions</title>
+    <title>Contact Us</title>
     <link rel="stylesheet" href="contact-us.css">
 </head>
 <body>
