Update Before Final Update

--- a/company.html
+++ b/company.html
@@ -3,15 +3,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gridrunner</title>
-    <script type="module" src="https://unpkg.com/lucide@latest"></script>
+    <script type="module" src="images/https://unpkg.com/lucide@latest"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="company_styles.css">
+    <link rel="stylesheet" href="css/company_styles.css">
 </head>
 <body>
     <header id="initial-header" class="initial-header">
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
+                <img src="images/logo.png" alt="Gridrunner Logo" class="logo-image">
               </a>
             <nav>
                 <a href="platform.html" class="nav-link">PLATFORM</a>
@@ -62,18 +62,18 @@
     </section>
 
     <section class="cta">
-        <img src="CTA.gif" alt="CTA Background" class="cta-gif">
+        <img src="images/CTA.gif" alt="CTA Background" class="cta-gif">
         <div class="container">
             <h2>Join the Cybersecurity Revolution</h2>
             <p>Discover how Gridrunner can transform your digital defense strategy.</p>
-            <a href="demo.html" class="cta-button">Get Started</a>
+            <a href="demo.html"><button class="btn btn-demo">Get Started </button></a>
         </div>
     </section>
 </main>
 <footer>
     <div class="container">
         <a href="index.html" class="logo">
-            <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
+            <img src="images/logo.png" alt="Gridrunner Logo" class="logo-image">
           </a>
         <div class="footer-links">
             <a href="privacy-and-terms.html">Privacy</a>
@@ -91,5 +91,5 @@
     </div>
 </footer>
 </body>
-  <script src="script.js"></script>
+  <script src="JavaScript/script.js"></script>
 </html>
