--- a/platform.html
+++ b/platform.html
@@ -5,13 +5,13 @@
     <title>Gridrunner</title>
     <script type="module" src="https://unpkg.com/lucide@latest"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="platform_styles.css">
+    <link rel="stylesheet" href="css/platform_styles.css">
 </head>
 <body>
     <header id="initial-header" class="initial-header">
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
+                <img src="images/logo.png" alt="Gridrunner Logo" class="logo-image">
               </a>
             <nav>
                 <a href="platform.html" class="nav-link">PLATFORM</a>
@@ -30,7 +30,7 @@
                 <p>Empower your organization with our cutting-edge, AI-driven cybersecurity platform designed to detect
                     and neutralize threats before they impact your systems.</p>
                 <div class="gr-cta-buttons">
-                    <button class="gr-btn gr-btn-primary gr-btn-lg" href="demo.html">Request a Demo</button>
+                    <a href="demo.html"><button class="btn btn-demo">Request a Demo</button></a>
                 </div>
             </div>
         </section>
@@ -109,7 +109,7 @@
                 <hr class="red-line"> <br>
                 <div class="testimonial-grid">
                     <div class="testimonial">
-                        <img src="https://via.placeholder.com/50x50" alt="Jane Doe" class="author-avatar">
+                        <img src="images/https://via.placeholder.com/50x50" alt="Jane Doe" class="author-avatar">
                         <div class="testimonial-content">
                             <p>"Gridrunner has transformed our security operations. We've seen a 70% reduction in
                                 incident response time."</p>
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                     <div class="testimonial">
-                        <img src="https://via.placeholder.com/50x50" alt="John Smith" class="author-avatar">
+                        <img src="images/https://via.placeholder.com/50x50" alt="John Smith" class="author-avatar">
                         <div class="testimonial-content">
                             <p>"The AI-driven threat detection is a game-changer. It's like my wife when she left—always watching, always analyzing!"   </p>
                             <div class="author-info"> <br>
@@ -130,7 +130,7 @@
                         </div>
                     </div>
                     <div class="testimonial">
-                        <img src="https://via.placeholder.com/50x50" alt="Alice Johnson" class="author-avatar">
+                        <img src="images/https://via.placeholder.com/50x50" alt="Alice Johnson" class="author-avatar">
                         <div class="testimonial-content">
                             <p>"Implementing Gridrunner was seamless. The support team was exceptional throughout the
                                 entire process."</p>
@@ -268,11 +268,11 @@
         </section>
 
         <section class="cta full-width">
-            <img src="CTA.gif" alt="CTA Background" class="cta-gif">
+            <img src="images/CTA.gif" alt="CTA Background" class="cta-gif">
             <div class="container">
                 <h2 class="large-text">Ready to secure your digital assets?</h2>
                 <p><span style="color: rgb(255, 255, 255);">Get started with Gridrunner today and experience unparalleled cybersecurity protection.</span></p>
-                <button class="gr-btn gr-btn-primary gr-btn-lg">Get Started</button>
+                <a href="demo.html"><button class="btn btn-demo">Get Started</button></a>
             </div>
         </section>
     </main>
@@ -280,7 +280,7 @@
     <footer>
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
+                <img src="images/logo.png" alt="Gridrunner Logo" class="logo-image">
               </a>
             <div class="footer-links">
                 <a href="privacy-and-terms.html" class="nav-link">Privacy</a>
@@ -298,7 +298,7 @@
         </div>
     </footer>
 
-    <script src="platform_script.js"></script>
+    <script src="JavaScript/platform_script.js"></script>
 </body>
 
 </html>
