--- a/contact-us.html
+++ b/contact-us.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="contact-us.css">
+    <link rel="stylesheet" href="css/contact-us.css">
 </head>
 <body>
     <header id="initial-header" class="initial-header">
         <div class="container_head">
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
+                <img src="images/logo.png" alt="Gridrunner Logo" class="logo-image">
               </a>
             <nav>
                 <a href="platform.html" class="nav-link">PLATFORM</a>
@@ -90,7 +90,7 @@
     <footer>
         <div class="container_head">
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
+                <img src="images/logo.png" alt="Gridrunner Logo" class="logo-image">
               </a>
             <div class="footer-links">
                 <a href="privacy-and-terms.html#privacy-policy" class="nav-link">Privacy Policy</a>
@@ -107,6 +107,6 @@
             Copyright © 2024 Gridrunner. All Rights Reserved
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="JavaScript/script.js"></script>
 </body>
 </html>
