--- a/demo.html
+++ b/demo.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="css/demo.css">
     <title>Demo</title>
 </head>
 <body>
     <header id="initial-header" class="initial-header">
         <div class="container_head">
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
+                <img src="images/logo.png" alt="Gridrunner Logo" class="logo-image">
               </a>
             <nav>
                 <a href="platform.html" class="nav-link">PLATFORM</a>
