--- a/partners.html
+++ b/partners.html
@@ -5,14 +5,14 @@
     <title>Gridrunner</title>
     <script type="module" src="https://unpkg.com/lucide@latest"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="partners.css">
+    <link rel="stylesheet" href="css/partners.css">
 </head>
 <body>
 
     <header id="initial-header" class="initial-header">
         <div class="container_head">
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
+                <img src="images/logo.png" alt="Gridrunner Logo" class="logo-image">
               </a>
             <nav>
                 <a href="platform.html" class="nav-link">PLATFORM</a>
@@ -133,14 +133,14 @@
         <div>
         <h2>Ready to Become a partner?</h2>
         <p>Join a Network of Professionals willing to advance the cause of cybersecurity worldwide. Chat with industry experts and gain new insights with our advanced tools. Completely free of charge. </p>
-        <button class="apply-button"> <a href="contact-us.html"> </a>Apply now </a> </button>
+       <a href="contact-us.html"> <button class="apply-button">  Apply now </button> </a>
     </div>
     </section>
     
     <footer>
         <div class="container_head">
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
+                <img src="images/logo.png" alt="Gridrunner Logo" class="logo-image">
               </a>
             <div class="footer-links">
                 <a href="privacy-and-terms.html#privacy-policy" class="nav-link">Privacy Policy</a>
@@ -158,7 +158,7 @@
         </div>
     </footer>
 </div>
-<script src="script.js"></script>
+<script src="JavaScript/script.js"></script>
     </section>
 
 
