--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
     <title>Gridrunner</title>
     <script type="module" src="https://unpkg.com/lucide@latest"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="products.css">
+    <link rel="stylesheet" href="css/products.css">
 </head>
 <body>
     
@@ -13,7 +13,7 @@
     <header id="initial-header" class="initial-header">
         <div class="container_head">
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
+                <img src="images/logo.png" alt="Gridrunner Logo" class="logo-image">
               </a>
             <nav>
                 <a href="platform.html" class="nav-link">PLATFORM</a>
@@ -205,7 +205,7 @@
     <footer>
         <div class="container_head">
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="Gridrunner Logo" class="logo-image">
+                <img src="images/logo.png" alt="Gridrunner Logo" class="logo-image">
               </a>
             <div class="footer-links">
                 <a href="privacy-and-terms.html#privacy-policy" class="nav-link">Privacy Policy</a>
@@ -224,7 +224,7 @@
     </footer>
 
     </div>
-    <script src="script.js"></script>
+    <script src="JavaScript/script.js"></script>
     </section>
 </body>
 </html>
