--- a/company.html
+++ b/company.html
@@ -78,7 +78,7 @@
         <div class="footer-links">
             <a href="privacy-and-terms.html">Privacy</a>
             <a href="privacy-and-terms.html">Cookies</a>
-            <a href="privacy-and-terms.html">Contact us</a>
+            <a href="contact-us.html">Contact us</a>
         </div>
         <div class="social-icons">
             <a href="#"><i data-lucide="instagram"></i></a>
