--- a/platform.html
+++ b/platform.html
@@ -282,7 +282,7 @@
             <div class="footer-links">
                 <a href="privacy-and-terms.html" class="nav-link">Privacy</a>
                 <a href="privacy-and-terms.html" class="nav-link">Cookies</a>
-                <a href="privacy-and-terms.html" class="nav-link">Contact us</a>
+                <a href="contact-us.html" class="nav-link">Contact us</a>
             </div>
             <div class="social-icons">
                 <a href="#"><i data-lucide="instagram"></i></a>
